--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ p.description {
     height: 100px;
     background-color: #EEE;
     border-radius: 100px;
-    background-image: url('../img/me2.jpg');
+    background-image: url('../img/me-cool.jpg');
     background-size: cover;
     background-position: center center;
 }
