--- a/css/main.css
+++ b/css/main.css
@@ -113,29 +113,29 @@ p.description {
 
 /* Thumbs */
 .thumbnail.inkling-1 {
-    background-image: url('../img/inkling-1.png');   
+    background-image: url('../img/inkling-1.jpg');   
 }
 .thumbnail.inkling-2 {
     background-image: url('../img/inkling-2.jpg');   
 }
 .thumbnail.inkling-3 {
-    background-image: url('../img/inkling-3.png');   
+    background-image: url('../img/inkling-3.jpg');   
 }
 .thumbnail.inkling-4 {
-    background-image: url('../img/inkling-4.png');   
+    background-image: url('../img/inkling-4.jpg');   
 }
 
 .thumbnail.itunes-1 {
-    background-image: url('../img/itunes-1.png');   
+    background-image: url('../img/itunes-1.jpg');   
 }
 .thumbnail.itunes-2 {
-    background-image: url('../img/itunes-2.png');   
+    background-image: url('../img/itunes-2.jpg');   
 }
 .thumbnail.itunes-3 {
     background-image: url('../img/itunes-3.jpg');   
 }
 .thumbnail.itunes-4 {
-    background-image: url('../img/itunes-4.png');   
+    background-image: url('../img/itunes-4.jpg');   
 }
 
 .thumbnail.hoody-1 {
