--- a/css/print.css
+++ b/css/print.css
@@ -1,3 +1,49 @@
+html {
+    margin: 0px;
+}
 body {
+    font-size: 10px;
+    line-height: 12px;
+    margin: 0px;
+}
+
+h1 {
+    font-size: 17px;
+    padding: 0px;
+    margin: 0px;
+}
+p.lead {
+    font-size: 15px;
+    padding: 0px;
+}
+
+h2 {
+    padding: 0px;
+    padding-bottom: 3px;
     font-size: 12px;
+}
+
+.header {
+    float: left;
+    width: 50%;
+}
+
+.info {
+    width: 50%;
+    float: right;
+    text-align: right;
+    position: relative;
+    top: 10px;
+}
+
+section {
+    margin: 0px;
+    padding: 0px;
+}
+
+ul {
+    margin: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 1em;
 }
