--- a/md/css/main.css
+++ b/md/css/main.css
@@ -42,6 +42,9 @@ iframe {
 .panel.sidebar li {
     list-style: none;
 }
+.panel.sidebar h3 {
+    padding: 20px;
+}
 .panel.sidebar .files h5 {
     padding: 10px 20px 0px;
     width: 100%;
