--- a/md/css/main.css
+++ b/md/css/main.css
@@ -198,7 +198,6 @@ iframe {
     color: #AAA;
     font-size: 13px;
 }
-<<<<<<< HEAD
 .panel .toolbar input {
     margin: 0px;
     margin-left: 45px;
@@ -238,6 +237,10 @@ iframe {
     background-position: center 7px;
     background-repeat: no-repeat;
 }
+.panel .toolbar h5 {
+    margin-left: 20px;
+}
+
 .panel .toolbar h5 {
     margin-left: 20px;
 }
