--- a/md/css/skeleton.css
+++ b/md/css/skeleton.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'TisaPro';
+  src: url('../fonts/TisaPro-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'TisaPro';
+  src: url('../fonts/TisaPro-Bold.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'TisaPro';
+  src: url('../fonts/TisaPro-Ita.otf') format('opentype');
+  font-weight: normal;
+  font-style: italic;
+}
+
 .container {
   position: relative;
   width: 100%;
@@ -91,14 +112,15 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
-  font-weight: 400;
-  font-family: "Merriweather", "Georgia",sans-serif;
-  color: #222; 
-  padding: 40px 20px;
-  max-width: 50em;
-  margin: 0 auto;
+    font-size: 17.5px; /* currently ems cause chrome bug misinterpreting rems on body element */
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: "TisaPro","Helvetica";
+    color: #222; 
+    padding: 40px 20px;
+    max-width: 35em;
+    min-width: 320px;
+    margin: 0 auto;
 }
 
 
@@ -108,11 +130,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h1 { font-size: 4.0rem; line-height: 1.2;  }
+h2 { font-size: 3.6rem; line-height: 1.25;  }
+h3 { font-size: 3.0rem; line-height: 1.3;   }
+h4 { font-size: 2.4rem; line-height: 1.35;  }
+h5 { font-size: 1.8rem; line-height: 1.5;   }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 
@@ -123,7 +145,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #0088CC; }
 a:hover {
   color: #0FA0CE; }
 
@@ -394,6 +416,89 @@ p,span,h1,h2,h3,h4,h5,h6 {
 }
 
 
+blockquote {
+  padding: 10px 20px;
+  margin: 0 0 20px;
+  border-left: 5px solid #eeeeee;
+}
+blockquote p:last-child,
+blockquote ul:last-child,
+blockquote ol:last-child {
+  margin-bottom: 0;
+}
+blockquote footer,
+blockquote small,
+blockquote .small {
+  display: block;
+  font-size: 80%;
+  line-height: 1.42857143;
+  color: #777777;
+}
+blockquote footer:before,
+blockquote small:before,
+blockquote .small:before {
+  content: '\2014 \00A0';
+}
+.blockquote-reverse,
+blockquote.pull-right {
+  padding-right: 15px;
+  padding-left: 0;
+  border-right: 5px solid #eeeeee;
+  border-left: 0;
+  text-align: right;
+}
+.blockquote-reverse footer:before,
+blockquote.pull-right footer:before,
+.blockquote-reverse small:before,
+blockquote.pull-right small:before,
+.blockquote-reverse .small:before,
+blockquote.pull-right .small:before {
+  content: '';
+}
+.blockquote-reverse footer:after,
+blockquote.pull-right footer:after,
+.blockquote-reverse small:after,
+blockquote.pull-right small:after,
+.blockquote-reverse .small:after,
+blockquote.pull-right .small:after {
+  content: '\00A0 \2014';
+}
+
+img[alt="Half"],
+img[alt="half"] {
+    float: left;
+    width: 50%;
+    margin-right: 20px;
+}
+
+img[alt="Third"],
+img[alt="third"] {
+    float: left;
+    width: 33.33%;
+    margin-right: 20px;
+}
+
+img[alt="Quarter"],
+img[alt="quarter"] {
+    float: left;
+    width: 25%;
+    margin-right: 20px;
+}
+
+
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    img[alt="Quarter"],
+    img[alt="quarter"],
+    img[alt="Third"],
+    img[alt="third"],
+    img[alt="Half"],
+    img[alt="half"] {
+        float: none;
+        width: 100%;
+        margin-right: 0px;
+    }
+}
 
 @media only print {
   body{
