--- a/md/css/skeleton.css
+++ b/md/css/skeleton.css
@@ -293,18 +293,29 @@ li {
 
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+code,
+kbd,
+pre,
+samp {
+  font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,sans-serif;
+}
+
 code {
   padding: .2rem .5rem;
   margin: 0 .2rem;
-  font-size: 90%;
+  font-size: 83%;
   white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; }
+  background: #FAFAFA;
+  border: 1px solid #F3F3F3;
+  border-radius: 0px; }
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
   white-space: pre; }
+
+code.hljs {
+}
 
 
 /* Tables
@@ -484,6 +495,7 @@ img[alt="quarter"] {
     width: 25%;
     margin-right: 20px;
 }
+
 
 
 /* Landscape phones and smaller */
