--- a/md/css/skeleton.css
+++ b/md/css/skeleton.css
@@ -546,7 +546,7 @@ figure[alt="quarter"] img {
   body {
     max-width: 100%;
     padding: 0px;
-    margin:.5in .5in .5in .5in; 
+    margin: 1in .5in 1in .5in; 
     font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
